syntax = "proto3";

package services.calendar;

import "resources/common/database/database.proto";
import "resources/calendar/access.proto";
import "resources/calendar/calendar.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/services/calendar;calendar";

message ListCalendarEntriesRequest {
  int32 year = 1 [(validate.rules).int32 = { gte: 2023 }];
  int32 month = 2 [(validate.rules).int32 = {
    gte: 1,
    lte: 12,
  }];
  repeated uint64 calendar_ids = 3 [jstype = JS_STRING];
}

message ListCalendarEntriesResponse {
  repeated resources.calendar.CalendarEntry entries = 1;
}

message ListCalendarsRequest {
  resources.common.database.PaginationRequest pagination = 1 [(validate.rules).message.required = true];
}

message ListCalendarsResponse {
  resources.common.database.PaginationResponse pagination = 1 [(validate.rules).message.required = true];
  repeated resources.calendar.Calendar calendars = 2;
}

message GetCalendarRequest {
  uint64 calendar_id = 1 [jstype = JS_STRING];
}

message GetCalendarResponse {
  resources.calendar.Calendar calendar = 1;
}

message CreateOrUpdateCalendarRequest {
  resources.calendar.Calendar calendar = 1;
}

message CreateOrUpdateCalendarResponse {
  resources.calendar.Calendar calendar = 1;
}

message DeleteCalendarRequest {
  uint64 calendar_id = 1 [jstype = JS_STRING];
}

message DeleteCalendarResponse {}

// Calendar Entries

message GetCalendarEntryRequest {
  uint64 calendar_id = 1 [jstype = JS_STRING];
  uint64 entry_id = 2 [jstype = JS_STRING];
}

message GetCalendarEntryResponse {
  resources.calendar.CalendarEntry entry = 1;
}

message CreateOrUpdateCalendarEntryRequest {
  resources.calendar.CalendarEntry entry = 1 [(validate.rules).message.required = true];
}

message CreateOrUpdateCalendarEntryResponse {
  resources.calendar.CalendarEntry entry = 1;
}

message DeleteCalendarEntriesRequest {
  uint64 calendar_id = 1 [jstype = JS_STRING];
  uint64 entry_id = 2 [jstype = JS_STRING];
}

message DeleteCalendarEntriesResponse {}

message ShareCalendarEntryRequest {
  uint64 entry_id = 1 [jstype = JS_STRING];
  resources.calendar.CalendarAccess access = 2;
}

message ShareCalendarEntryResponse {
  resources.calendar.CalendarAccess access = 1;
}

// RSVP

message ListCalendarEntryRSVPRequest {
  resources.common.database.PaginationRequest pagination = 1 [(validate.rules).message.required = true];
  uint64 entry_id = 2 [jstype = JS_STRING];
}

message ListCalendarEntryRSVPResponse {
  resources.common.database.PaginationResponse pagination = 1 [(validate.rules).message.required = true];
  repeated resources.calendar.CalendarEntryRSVP entries = 2;
  optional resources.calendar.CalendarEntryRSVP own_entry = 3;
}

message RSVPCalendarEntryRequest {
  resources.calendar.CalendarEntryRSVP entry = 1;
  bool subscribe = 2;
}

message RSVPCalendarEntryResponse {
  resources.calendar.CalendarEntryRSVP entry = 1;
}

service CalendarService {
  // @perm: Name=Any
  rpc ListCalendarEntries(ListCalendarEntriesRequest) returns (ListCalendarEntriesResponse);

  // @perm: Name=Any
  rpc ListCalendars(ListCalendarsRequest) returns (ListCalendarsResponse);
  // @perm: Name=Any
  rpc GetCalendar(GetCalendarRequest) returns (GetCalendarResponse);
  // @perm: Attrs=Fields/StringList:[]string{"Job"}
  rpc CreateOrUpdateCalendar(CreateOrUpdateCalendarRequest) returns (CreateOrUpdateCalendarResponse);
  // @perm
  rpc DeleteCalendar(DeleteCalendarRequest) returns (DeleteCalendarResponse);

  // @perm: Name=Any
  rpc GetCalendarEntry(GetCalendarEntryRequest) returns (GetCalendarEntryResponse);
  // @perm
  rpc CreateOrUpdateCalendarEntry(CreateOrUpdateCalendarEntryRequest) returns (CreateOrUpdateCalendarEntryResponse);
  // @perm
  rpc DeleteCalendarEntries(DeleteCalendarEntriesRequest) returns (DeleteCalendarEntriesResponse);
  // @perm: Name=CreateOrUpdateCalendarEntry
  rpc ShareCalendarEntry(ShareCalendarEntryRequest) returns (ShareCalendarEntryResponse);

  // @perm: Name=Any
  rpc ListCalendarEntryRSVP(ListCalendarEntryRSVPRequest) returns (ListCalendarEntryRSVPResponse);
  // @perm: Name=Any
  rpc RSVPCalendarEntry(RSVPCalendarEntryRequest) returns (RSVPCalendarEntryResponse);
}
